samples/errors/error_state_expr_always_true.sara
exemple1 := input -> output auto {
  state state1, state2  ;
  first state1 ;
  state1 : true out output:0 {
    input goto state2 ;
  }
  state2 : input | ! input out output:0 {
    input goto state1 ;
  }
} ;
